<resources>
    <string name="app_name">MSIT Portal</string>
    <string-array name="department_arrays">
        <item>Select a department</item>
        <item>CSE</item>
        <item>IT</item>
        <item>ECE</item>
        <item>EEE</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="rachit_name">Harish phulara</string>
    <string name="rachit_email">hphulara996@gmail.com</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Closed</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_home">Home Sweet Home</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_student_drawer">Welcome Student</string>
    <string name="title_activity_staff_drawer">Welcome Staff</string>
    <string name="title_activity_hod_drawer">Welcome HOD</string>
    <string name="title_activity_parent_drawer">Welcome Parent</string>
    <string name="title_activity_about_msit">About Msit</string>
    <string name="title_activity_portal">Portal</string>
    <string name="title_activity_register__parent">Parent Registration</string>
    <string name="title_activity_register__staff">Staff Registration</string>
    <string name="title_activity_register__student">Student Registration</string>
    <string name="title_activity_register__hod">HOD Registration</string>
    <string name="title_activity_login__student">Student Login</string>
    <string name="title_activity_login__staff">Staff login</string>
    <string name="title_activity_login__parent">Parent Login</string>
    <string name="title_activity_login__hod">HOD Login</string>
    <string name="title_activity_course">Courses</string>
    <string name="title_activity_syllabus">Syllabus</string>
    <string name="title_activity_semester">Choose your semester</string>
    <string name="title_activity_cse">CSE</string>
    <string name="title_activity_eee">EEE</string>
    <string name="title_activity_ece">ECE</string>
    <string name="title_activity_it">IT</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_favorite">My Favorites</string>
    <string name="title_activity_reminder">Reminders</string>
    <string name="title_activity_sticky__reminder">Set my reminder</string>
    <string name="title_activity_marksheet">My Marksheet</string>
    <string name="title_activity_syllabus_student">Syllabus</string>
    <string name="title_activity_semester_student">Choose your semester</string>
    <string name="title_activity_events_student">My Events</string>
    <string name="title">Title</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="title_activity_fav_settings">FavSettings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>
    <string name="title_section5">Section 5</string>
    <string name="title_section6">Section 6</string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="str_img1">Image1</string>
    <string name="str_img2">Image2</string>
    <string name="str_img3">Image3</string>
    <string name="str_img4">Image4</string>
    <string name="str_img5">Image5</string>
    <string name="str_btn_start">Start SlideShow</string>
    <string name="str_btn_stop">Stop SlideShow</string>
    <string name="title_activity_tabular">TabularActivity</string>
    <string name="about_us">Maharaja Surajmal Institute of Technology is an AICTE approved Institute under GGSIP University. MSIT is ideally located in the heart of Janakpuri, New Delhi. It has a campus spread over eight acres of land with beautiful eco-friendly surroundings.</string>
    <string name="about_us_2">MSIT has a Training and Placement Cell which imparts training to the students for their overall development and selection during campus recruitment activities.</string>
    <string name="maharaja_surajmal">Placement Cell of MSIT</string>
    <string name="title_activity_waste">Waste</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="title_activity_parent_home">ParentHomeActivity</string>
    <string name="title_activity_hod_home">HodHomeActivity</string>
    <string name="title_activity_staff_home">StaffHomeActivity</string>
    <string name="action_websearch">Web search</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="title_activity_complaints">ComplaintsActivity</string>
    <string name="title_activity_login__director">Login_Director</string>
    <string name="title_activity_director_home">DirectorHomeActivity</string>
    <string name="title_activity_director_drawer">DirectorDrawerActivity</string>
    <string name="title_activity_notices__student">Notices_StudentActivity</string>
    <string name="title_activity_parent__attendance">Parent_AttendanceActivity</string>
    <string name="title_activity_parent__tabular">Parent_TabularActivity</string>
    <string name="title_activity_parents__syllabus">Parents_SyllabusActivity</string>
    <string name="title_activity_parents__events">Parents_EventsActivity</string>
    <string name="title_activity_parent__notice_board">Parent_NoticeBoardActivity</string>
    <string name="title_activity_parent__semester">Parent_SemesterActivity</string>
    <string name="title_activity_staff__attendance">Staff_AttendanceActivity</string>
    <string name="title_activity_attendance_pdf">AttendancePdfActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string-array name="Lectures">
        <item>Lecture 1</item>
        <item>Lecture 2</item>
        <item>Lecture 3</item>
        <item>Lecture 4</item>
        <item>Lecture 5</item>
        <item>Lecture 6</item>
    </string-array>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="menu_create_new_reminder">Create New Reminder</string>
    <string name="new_reminder">New Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="nice_menu_plus">+</string>
    <string name="menu_show_reminders">Show Reminders</string>
    <string name="newReminderTitle">Remind me…</string>
    <string name="date">Date</string>
    <string name="starting_date">Starting Date</string>
    <string name="time">Time</string>
    <string name="date_colon">Date:</string>
    <string name="time_colon">Time:</string>
    <string name="sample_time">12:35 PM</string>
    <string name="sample_date">Every Wednesday</string>
    <string name="sample_reminder_title">Sample Reminder Title</string>
    <string name="sample_status">Inactive</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="setTime">Set Time</string>
    <string name="setDate">Set Date</string>
    <string name="snooze">Snooze</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="affinity_dialogs">Dialogs</string>
    <string name="title_activity_set_date">Set Date</string>
    <string name="title_activity_set_time">Set Time</string>
    <string name="title_activity_list_reminders">List of Reminders</string>
    <string name="title_activity_popup_dialog">Popup Dialog</string>
    <string name="scheduledRemindersTitle">Scheduled reminders:</string>
    <string name="viewScheduledReminders">View Reminders</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="save_reminder">Save Reminder</string>
    <string name="menu_show_number_of_reminders">Show Number of Reminders</string>
    <string name="menu_save_reminder">Save Reminder</string>
    <string name="menu_help">Help</string>
    <string name="settings_vibration_category_title">Vibration</string>
    <string name="settings_vibrate">Use Vibration?</string>
    <string name="settings_vibrate_summary">Should the device vibrate when reminder goes off?</string>
    <string name="settings_vibration_pattern">Vibration Pattern</string>
    <string name="settings_popup_dialog">Use Popup Dialog?</string>
    <string name="settings_popup_dialog_category_title">Popup Dialog</string>
    <string name="settings_popup_dialog_summary">Should a popup be displayed when reminder goes off?</string>
    <string name="settings_pickers">Use New, Analog Style Pickers?</string>
    <string name="settings_pickers_category_title">Pickers Style</string>
    <string name="settings_pickers_summary">Should new, analog style of date and time pickers be used?</string>
    <string name="settings_vibration_pattern_summary">Specify vibration pattern. Format: pause, length, pause, length etc. Values in milliseconds. Leave blank for default</string>
    <string name="settings_vibration_pattern_dialog_title">Enter Vibration Pattern or Leave Blank for Default</string>
    <string name="settings_vibration_pattern_default">50,500,300,500,300,500</string>
    <string name="settings_ringtone_category_title">Notification Sound</string>
    <string name="settings_ringtone">Use Notification Sound?</string>
    <string name="settings_ringtone_summary">Should the device play a notification sound when reminder goes off?</string>
    <string name="settings_ringtone_style">Pick a Notification Sound</string>
    <string name="settings_ringtone_style_summary">Click here to choose notification sound</string>
    <string name="settings_led_category_title">LED Light</string>
    <string name="settings_led">Flash LED Light?</string>
    <string name="settings_led_summary">Should the LED Light flash when reminder goes off?</string>
    <string name="settings_screen_category_title">Screen</string>
    <string name="settings_screen">Turn Screen On?</string>
    <string name="settings_screen_summary">Should the screen be turned on when reminder goes off?</string>
    <string name="settings_swipe_away_category_title">Notification Interaction</string>
    <string name="settings_swipe_away">Swipe Away to Delete?</string>
    <string name="settings_swipe_away_summary">Should the reminder be deleted when you clear its notification by either swiping it away or clearing all notifications?</string>
    <string name="settings_snooze_category_title">Snooze</string>
    <string name="settings_snooze_length">Snooze Length</string>
    <string name="settings_snooze_length_summary">Specify snooze length in minutes. Leave blank for default (15 minutes)</string>
    <string name="settings_snooze_length_dialog_title">Enter Snooze Length (Minutes)</string>
    <string name="settings_snooze_length_default">15</string>
    <string name="settings_repetition_category_title">Notification Repetition</string>
    <string name="settings_repetition">Repeat Alarm Until Attended?</string>
</resources>