<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ViewFlipper
        android:id="@+id/flipper1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:flipInterval="3000"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/heading2"
        android:background="#defffcf9">

        <ImageView
            android:src="@drawable/home_image1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/str_img1"
            android:layout_gravity="center_horizontal"

            />

        <ImageView
            android:src="@drawable/home_image2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/str_img2"
            android:layout_gravity="center_horizontal"
            />

        <ImageView
            android:src="@drawable/home_image3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/str_img3"
            android:layout_gravity="center_horizontal"
            />

        <!--
                <ImageView
                    android:src="@drawable/img4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/str_img4"
                    android:layout_gravity="center_horizontal"
                    />

                <ImageView
                    android:src="@drawable/img5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/str_img5"
                    android:layout_gravity="center_horizontal"
                    />
        -->
    </ViewFlipper>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="MAHARAJA SURAJMAL INSTITUTE"
        android:id="@+id/heading1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#defbfffd"
        android:background="#ff389a52"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="OF TECHNOLOGY"
        android:id="@+id/heading2"
        android:layout_below="@+id/heading1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#defbfffd"
        android:background="#ff389a52"
        android:textStyle="bold" />

</RelativeLayout>