<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivAbout"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/maharaja_surajmal"
        android:src="@drawable/main"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageView
                android:id="@+id/ivAbout2"
                android:layout_width="fill_parent"
                android:layout_height="120dip"
                android:layout_weight="30"
                android:contentDescription="@string/maharaja_surajmal"
                android:src="@drawable/college"/>

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="30"
                android:gravity="fill_horizontal|center_vertical|fill_vertical|center_horizontal"
                android:text="@string/about_us"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/tvAbout3"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:gravity="center_vertical|end"
                    android:text="@string/maharaja_surajmal"
                    android:textSize="20sp"/>


            </LinearLayout>

            <TextView
                android:id="@+id/tvAbout2"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="50"
                android:gravity="fill_horizontal|center_vertical|center_horizontal|fill_vertical"
                android:text="@string/about_us_2"
                android:textSize="18sp"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
